# otto

./: .coverage  .pre-commit-config.yaml  AGENTS.md  Otto.drawio  README.md  conftest.py  docker-compose.local.yml  docker-compose.prod.yml  implementation_plan.md  pyproject.toml  spec.md
components/crawler_scheduler/: README.md  config.py  implementation_plan.md  main.py  metrics.py  pyproject.toml  seeds.py  seeds.yaml
components/crawler_scheduler/deploy/: Dockerfile
components/crawler_scheduler/src/crawler_scheduler/: __init__.py  config.py  main.py  metrics.py  seeds.py
components/crawler_scheduler/tests/: conftest.py  test_scheduler.py  test_seeds.py
components/page_fetcher/: README.md  implementation_plan.md  pyproject.toml
components/page_fetcher/deploy/: Dockerfile
components/page_fetcher/src/page_fetcher/: __init__.py  circuit_breaker.py  config.py  fetcher.py  main.py  metrics.py  models.py  rate_limiter.py  robots.py
components/page_fetcher/tests/: conftest.py  test_circuit_breaker.py  test_config.py  test_models.py  test_rate_limiter.py  test_robots.py
shared/: __init__.py
shared/core/: __init__.py  pyproject.toml  pytest_fixtures.py
shared/core/core/: __init__.py  queue.py
shared/core/src/core/: __init__.py  cache.py  kafka.py  logging.py  pytest_fixtures.py  queue.py
shared/core/tests/: conftest.py  test_redis_queue.py
shared/testing/: __init__.py  conftest.py  pyproject.toml
