[project]
name = "otto"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyrefly>=0.51.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "redis>=5.0",
    "testcontainers>=4.14.1",
]

[tool.uv.workspace]
members = [
  "shared/testing",
  "components/*",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
