[project]
name = "otto"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyrefly>=0.51.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "testcontainers>=4.14.1",
]

[tool.uv.sources]
otto-core = { workspace = true }

[tool.uv.workspace]
members = [
  "shared/core",
  "components/*",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
