[project]
name = "otto"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyrefly>=0.51.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.8",
    "testcontainers>=4.14.1",
]

[tool.uv.sources]
otto-core = { workspace = true }

[tool.uv.workspace]
members = [
  "shared/core",
  "components/*",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
[tool.pyrefly.errors]
implicit-any = "error"
unannotated-parameter = "error"
unannotated-return = "error"
missing-override-decorator = "error"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["I"]  # isort; add more rules as needed
