[project]
name = "page-fetcher"
version = "0.1.0"
description = "Downloads web pages from crawler queue, caches in Redis, publishes to Kafka."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "otto-core",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/page_fetcher"]

[project.scripts]
page-fetcher = "page_fetcher.main:main"
