[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "otto-core"
version = "0.1.0"
description = "Common interfaces and implementations for Otto components (queue abstraction, Redis backend)"
requires-python = ">=3.12"
dependencies = [
    "redis>=7.1",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "aiokafka>=0.13",
    "prometheus-client>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest>=9.0",
    "testcontainers>=4.14",
]

